noinst_LIBRARIES = libaux_simulator.a
libaux_simulator_a_SOURCES = conductance_model.h \
	symmetric_voltage_independent.h \
	symmetric_voltage_independent.cc \
	symmetric_voltage_one_site.h \
	symmetric_voltage_one_site.cc \
	symmetric_voltage_two_site.h \
	symmetric_voltage_two_site.cc \
	asymmetric_voltage_independent.h \
	asymmetric_voltage_independent.cc
