noinst_LIBRARIES = libaux_simulator.a
libaux_simulator_a_SOURCES = conductance_model.h \
	conductance_model.cc \
	symmetric_one_site.h \
	symmetric_one_site.cc \
	symmetric_voltage_one_site.h \
	symmetric_voltage_one_site.cc \
	symmetric_two_site.h \
	symmetric_two_site.cc \
	symmetric_voltage_two_site.h \
	symmetric_voltage_two_site.cc \
	asymmetric_one_site.h \
	asymmetric_one_site.cc
