noinst_LIBRARIES = libfitter_models.a

AM_CPPFLAGS = -I../../general

libfitter_models_a_SOURCES = fit_model.h \
	fit_model.cc \
	fit_model_1d.h \
	fit_model_1d.cc \
	symmetric_resonant.h \
	symmetric_resonant.cc \
	symmetric_nonresonant.h \
	symmetric_nonresonant.cc \
	asymmetric_resonant.h \
	asymmetric_resonant.cc
