TESTS = test_histogram1d_linear \
	test_histogram1d_log \
	test_histogram2d_linear \
	test_histogram2d_log

check_PROGRAMS = test_histogram1d_linear \
	test_histogram1d_log \
	test_histogram2d_linear \
	test_histogram2d_log

test_histogram1d_linear_SOURCES = test_histogram1d_linear.cc \
	bin_style.h \
	bin_linear.h \
	bin_linear.cc \
	histogram_interface.h \
	histogram1d.h \
	histogram1d.cc

test_histogram1d_log_SOURCES = test_histogram1d_log.cc \
	bin_style.h \
	bin_log.h \
	bin_log.cc \
	histogram_interface.h \
	histogram1d.h \
	histogram1d.cc

test_histogram2d_linear_SOURCES = test_histogram2d_linear.cc \
	bin_style.h \
	bin_linear.h \
	bin_linear.cc \
	histogram_interface.h \
	histogram2d.h \
	histogram2d.cc

test_histogram2d_log_SOURCES = test_histogram2d_log.cc \
	bin_style.h \
	bin_log.h \
	bin_log.cc \
	histogram_interface.h \
	histogram2d.h \
	histogram2d.cc
