TESTS = test_simulate_model_interface_direct

check_PROGRAMS = test_simulate_model_interface_direct

test_simulate_model_interface_direct_SOURCES = \
	test_simulate_model_interface_classes.h \
	test_simulate_model_interface_direct.cc \
	simulate_model_interface.h
test_simulate_model_interface_direct_LDADD = ../libmolstat_general.a
